--- a/extras/C/Makefile
+++ b/extras/C/Makefile
@@ -1,19 +1,24 @@
 NAME = 15puzzle
 SRC = heuristic.c ht.c main.c moves.c pq.c utils.c
-OBJ = $(SRC:.c=.o)
 
 CFLAGS += -O2 -Wall -Werror -Wextra
 LDFLAGS += -O2
 
 all: $(NAME)
 
-$(NAME): $(OBJ)
+$(NAME): $(SRC:.c=.o)
 	$(CC) -o $@ $(LDFLAGS) $^
 
 clean:
-	rm -f $(OBJ)
+	$(RM) *.o
 
 fclean: clean
-	rm -f $(NAME)
+	$(RM) $(NAME)
+
+format:
+	clang-format -i *.c *.h
+
+tidy:
+	clang-tidy *.c *.h -- $(CFLAGS)
 
 re: fclean all
